--- a/client/src/components/Platform/platform.css
+++ b/client/src/components/Platform/platform.css
@@ -22,6 +22,10 @@
   background: linear-gradient(to bottom, #f7b733, #fc4a1a);
 }
 
+.section-6 {
+  background: linear-gradient(to top, #f7b733, #fc4a1a);
+}
+
 /* SECTION 1 */
 /* GIF BUBBLE SECTION-1 */
 
@@ -295,4 +299,81 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-/* SECTION 4 */
+/* SECTION 6 */
+/* Ellipse "SEE ALL U CAN ACCOMPLISH */
+.content-container-1 {
+  background-color: black;
+  border: none;
+  clip-path: ellipse(75% 100% at center top);
+  min-height: 300px;
+  color: white;
+}
+/* TESTIMONIALS */
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+.snip1533 {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  color: #9e9e9e;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 1rem;
+  margin: 35px 30px 20px;
+  max-width: 310px;
+  min-width: 250px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 5px;
+  border: 0.15rem solid #17202A;
+}
+
+.snip1533 *,
+.snip1533 *:before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.1s ease-out;
+  transition: all 0.1s ease-out;
+}
+
+.snip1533 figcaption {
+  padding: 13% 5% 10%;
+}
+
+.snip1533 figcaption:before {
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  color: #FB8C00;
+  content: "\f10e";
+  font-family: 'FontAwesome';
+  font-size: 32px;
+  font-style: normal;
+  left: 50%;
+  line-height: 60px;
+  position: absolute;
+  top: -30px;
+  width: 60px;
+}
+
+.snip1533 h3 {
+  color: #3c3c3c;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 24px;
+  margin: 10px 0 5px;
+}
+
+.snip1533 h4 {
+  font-weight: 400;
+  margin: 0;
+  opacity: 0.5;
+}
+
+.snip1533 blockquote {
+  font-style: italic;
+  font-weight: 300;
+  margin: 0 0 0.5rem;
+}
+/* TESTIMONIALS */
