roi calc, color scheme

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -67,19 +67,19 @@
 .container .box:nth-child(1):before,
 .container .box:nth-child(1):after
 {
-  background: linear-gradient(315deg, #ffbc00, #ff0058)
+  background: linear-gradient(315deg, #f7b733, #fc4a1a)
 }
 
 .container .box:nth-child(2):before,
 .container .box:nth-child(2):after
 {
-  background: linear-gradient(315deg, #03a9f4, #ff0058)
+  background: linear-gradient(315deg, #f7b733, #fc4a1a)
 }
 
 .container .box:nth-child(3):before,
 .container .box:nth-child(3):after
 {
-  background: linear-gradient(315deg, #4dff03, #00d0ff)
+  background: linear-gradient(315deg, #f7b733, #fc4a1a)
 }
 
 .container .box span
@@ -224,12 +224,9 @@
   padding: 2rem;
 }
 .container-1 {
-  background-color: black;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  border-radius: 8px;
   overflow: hidden;
   position: relative; 
-  color: white;
+  color: black;
 }
 
 .left-container {
