--- a/src/components/Platform/platform.css
+++ b/src/components/Platform/platform.css
@@ -49,7 +49,9 @@ body {
 .left {
   --_p: 0;
   border-bottom-left-radius: 0 0;
-  place-self: start;
+  @media only screen and (max-width: 767px) {
+    display: none;
+  }
 }
 .right {
   --_p: 100%;
@@ -305,7 +307,7 @@ body {
 /* SECTION 6 */
 /* Ellipse "SEE ALL U CAN ACCOMPLISH */
 .content-container-1 {
-  background-color: black;
+  background-color: #4c49ea;
   border: none;
   clip-path: ellipse(75% 100% at center top);
   min-height: 300px;
