--- a/src/components/Platform/platform.css
+++ b/src/components/Platform/platform.css
@@ -8,28 +8,29 @@ body {
 }
 
 .section-1 {
-  min-height: 90vh;
+  min-height: 80vh;
+  background: linear-gradient(to bottom, #FF6600, #fc4a1a);
 }
 
-/* .section-2 {
-  background: linear-gradient(to top, #f7b733, #fc4a1a);
+.section-2 {
+  background-color: white;
 }
 
 .section-3 {
-  background: linear-gradient(to bottom, #f7b733, #fc4a1a);
+  background-color: white;
 }
 
 .section-4 {
-  background: linear-gradient(to top, #f7b733, #fc4a1a);
+  background-color: white;
 }
 
 .section-5 {
-  background: linear-gradient(to bottom, #f7b733, #fc4a1a);
+  background-color: white;
 }
 
 .section-6 {
-  background: linear-gradient(to top, #f7b733, #fc4a1a);
-} */
+  background-color: white;
+}
 
 /* SECTION 1 */
 /* GIF BUBBLE SECTION-1 */
@@ -94,70 +95,6 @@ body {
 .free-trial button:hover span:after {
   opacity: 1;
   right: 0;
-}
-
-
-/* SECTION 2 */
-
-/* Speech Bubbles */
-.speech-bubble2 {
-  margin: 1.5em auto;
-  padding: 1em;
-  border-radius: .25em;
-  transform: rotate(-4deg) rotateY(15deg);
-  background: #212F3D;
-  text-align: center;
-}
-
-.speech-bubble-right2 {
-  position: relative;
-  margin: 1.5em auto;
-  padding: 1em;
-  border-radius: .25em;
-  transform: rotate(1deg) rotateY(15deg);
-  background: #212F3D;
-  text-align: center;
-}
-
-.speech-bubble2:before, .speech-bubble2:after,
-.speech-bubble-right2:before, .speech-bubble-right2:after {
-  position: absolute;
-  z-index: -1;
-  content: '';
-}
-
-.speech-bubble2:after, .speech-bubble-right2:after {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-radius: inherit;
-  transform: rotate(2deg) translate(.45em, -.15em) scale(1.02);
-  background: #f4fbfe;
-}
-
-/* Left-aligned speech bubble */
-.speech-bubble2:before {
-  border: solid 0 transparent;
-  border-right: solid 3.5em #f4fbfe;
-  border-bottom: solid .25em #629bdd;
-  bottom: .25em;
-  left: 1.25em;
-  width: 0;
-  height: 0.9em;
-  transform: rotate(45deg) skewX(75deg);
-}
-
-/* Right-aligned speech bubble */
-.speech-bubble-right2:before {
-  border: solid 0 transparent;
-  border-left: solid 3.5em #f4fbfe;
-  border-bottom: solid .25em black;
-  bottom: .25em;
-  right: 1.25em;
-  width: 0;
-  height: 0.75em;
-  transform: rotate(-45deg) skewX(-75deg);
 }
 
 /* SECTION 3 */
@@ -305,11 +242,10 @@ body {
 /* SECTION 6 */
 /* Ellipse "SEE ALL U CAN ACCOMPLISH */
 .content-container-1 {
-  background-color: #4c49ea;
+  background: linear-gradient(to bottom, #FF6600, #fc4a1a);
   border: none;
   clip-path: ellipse(75% 100% at center top);
   min-height: 300px;
-  color: white;
 }
 /* TESTIMONIALS */
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
