--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -217,53 +217,11 @@
 
 /* SECTION-02 */
 .section-02 {
-  background: #fc4a1a; 
-  background: -webkit-linear-gradient(to top, #f7b733, #fc4a1a);
-  background: linear-gradient(to top, #f7b733, #fc4a1a); 
+  background: linear-gradient(to bottom, #FF6600, #fc4a1a);
   color: black;
   padding: 2rem;
 }
-.container-1 {
-  overflow: hidden;
-  position: relative; 
-  color: black;
-}
 
-.left-container {
-  width: 100%;
-  height: 18.75rem;
-  position: relative; /* Change to relative positioning */
-}
-
-.left-container img {
-  position: absolute; /* Change to absolute positioning */
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  transition: opacity 0.3s ease;
-  opacity: 0;
-}
-
-.left-container img.active {
-  opacity: 1;
-}
-
-.right-container {
-  padding: 20px;
-  width: 50%;
-}
-
-.right-container h1 {
-  margin-top: 0;
-}
-
-.highlight {
-  color: blue;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-/* SECTION 3 */
 /* SECTION 3 */
 .ag-format-container {
   margin: 0 auto;
