--- a/src/components/Platform/platform.css
+++ b/src/components/Platform/platform.css
@@ -25,7 +25,7 @@ body {
 }
 
 .section-5 {
-  background-color: white;
+  background-color: rgb(228, 219, 219);
 }
 
 .section-6 {
@@ -247,6 +247,13 @@ body {
   clip-path: ellipse(75% 100% at center top);
   min-height: 300px;
 }
+
+ul.states {
+  background: linear-gradient(to bottom, #FF6600, #fc4a1a);
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
 /* TESTIMONIALS */
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
