--- a/src/components/Platform/platform.css
+++ b/src/components/Platform/platform.css
@@ -33,6 +33,63 @@ body {
 }
 
 /* SECTION 1 */
+.feature-container {
+  position: relative;
+}
+
+/* Center logo */
+.center-logo {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.feature {
+  position: absolute;
+}
+
+/* Adjust the circle layout for the right side */
+.feature-1 {
+  top: 5%;
+  left: 70%; 
+}
+
+.feature-2 {
+  top: 5%;
+  right: 50%; 
+}
+
+.feature-3 {
+  top: 50%;
+  left: 75%; 
+}
+
+.feature-4 {
+  top: 50%;
+  right: 55%; 
+}
+
+.feature-5 {
+  top: 75%;
+  left: 45%;
+}
+
+.feature-container .feature {
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.feature-container:hover .feature {
+  opacity: 0.3;
+}
+
+.feature-container .feature:hover {
+  opacity: 1;
+}
+
+
 /* GIF BUBBLE SECTION-1 */
 
 .bubble {
