--- a/src/components/FAQ/faq.css
+++ b/src/components/FAQ/faq.css
@@ -1,15 +1,17 @@
 .faq {
-  height: 80vh;
+  min-height: 80vh;
+  background-color: #ddd;
+  padding: 2rem;
 }
 
 .accordion {
-  border: 1px solid #ddd;
+  border: 1px solid black;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .accordion-item {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid black;
 }
 
 .accordion-item:last-child {
@@ -17,7 +19,7 @@
 }
 
 .accordion-header {
-  background-color: #f7f7f7;
+  background-color: #FF6600;
   padding: 15px;
   display: flex;
   justify-content: space-between;
@@ -26,13 +28,15 @@
 
 .accordion-header h3 {
   margin: 0;
+  font-size: x-large;
 }
 
 .accordion-body {
   padding: 15px;
-  background-color: #fff;
+  background-color: #fcae04;
 }
 
 .accordion-body p {
   margin: 0;
+  font-size: x-large;
 }
