--- a/src/components/Platform/platform.css
+++ b/src/components/Platform/platform.css
@@ -32,26 +32,30 @@ body {
   background-color: white;
 }
 
+.attribution {
+  color: rgb(207, 205, 205)
+}
+
 /* SECTION 1 */
-/* .feature-container {
+.feature-container {
   position: relative;
-} */
+}
 
 /* Center logo */
 .center-logo {
   position: absolute;
-  top: 60%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10;
 }
 
-/* .feature {
+.feature {
   position: absolute;
-} */
+}
 
 /* Adjust the circle layout for the right side */
-/* .feature-1 {
+.feature-1 {
   top: 3.5%;
   left: 67%; 
 }
@@ -59,21 +63,22 @@ body {
 .feature-2 {
   top: 3%;
   right: 50%; 
-} */
+}
 
 .feature-3 {
   top: 50%;
-  left: 75%; 
+  left: 70%; 
 }
 
 .feature-4 {
   top: 50%;
-  right: 57.5%; 
+  right: 55%; 
+  right: 54%; 
 }
 
 .feature-5 {
-  top: -5%;
-  left: 40.5%;
+  top: 75%;
+  left: 42%;
 }
 
 .feature-container .feature {
@@ -88,6 +93,7 @@ body {
 .feature-container .feature:hover {
   opacity: 1;
 }
+
 
 
 /* GIF BUBBLE SECTION-1 */
