--- a/src/index.css
+++ b/src/index.css
@@ -1,91 +1,38 @@
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 .freeman-regular {
-    font-family: "Freeman", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+  font-family: "Freeman", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
-  .racing-sans-one-regular {
-    font-family: "Racing Sans One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+.saira-regular {
+  font-family: "Saira", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 
+.poppins-bold {
+font-family: "Poppins", serif;
+font-weight: 700;
+font-style: normal;
+}
 
-  .rock-salt-regular {
-    font-family: "Rock Salt", cursive;
-    font-weight: 400;
-    font-style: normal;
-  }
+.saira-medium {
+  font-family: "Saira", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: italic;
+  font-variation-settings:
+    "wdth" 100;
+}
 
-  .alata-regular {
-    font-family: "Alata", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-
-   /* <uniquifier>: Use a unique and descriptive class name
-   <weight>: Use a value from 100 to 900 */
-
-  .saira-regular {
-    font-family: "Saira", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-
-  .saira-medium {
-    font-family: "Saira", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: italic;
-    font-variation-settings:
-      "wdth" 100;
-  }
-
-  .stylish-regular {
-    font-family: "Stylish", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  .noto-sans-elymaic-regular {
-    font-family: "Noto Sans Elymaic", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-
-
-  .ubuntu-sans-mono-regular {
-    font-family: "Ubuntu Sans Mono", monospace;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  .raleway-thin {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
-  }
-
-  background-color: linear-gradient(to bottom, #f7b733, #fc4a1a);
-
+.open-sans-light {
+font-family: "Open Sans", sans-serif;
+font-optical-sizing: auto;
+font-weight: 300;
+font-style: normal;
+font-variation-settings:
+  "wdth" 100;
 }
