phrasing for 'abput' pages

--- a/src/components/Security/security.css
+++ b/src/components/Security/security.css
@@ -15,3 +15,11 @@ body {
 .section-sa-3 {
   background-color: white;
 }
+
+.security {
+  background-color: #ddd;
+}
+
+.accessibility {
+  background-color: #ddd;
+}
