--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -110,9 +110,10 @@ nav ul li a:hover {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: #fff;
+  background-color: #ece9e6;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   z-index: 99;
+  opacity: 0.98;
 }
 
 .submenu li {
