homepage chabot + analytics

--- a/src/components/Platform/platform.css
+++ b/src/components/Platform/platform.css
@@ -32,6 +32,10 @@ body {
   background-color: white;
 }
 
+.section-7 {
+  background-color: white;
+}
+
 .attribution {
   color: rgb(207, 205, 205)
 }
