--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -50,11 +50,13 @@ nav ul li a {
   font-size: 22px;
   text-decoration: none;
   display: block;
+  border-radius: 9999px;
 }
 
 nav ul li a:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
   background: rgba(255, 255, 255, 0.1);
+  border-radius: 9999px;
 }
 
 @keyframes fadeInOut {
