--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -2,9 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 header {
-  background: #ece9e6; 
-  background: -webkit-linear-gradient(to left, #ffffff, #ece9e6); 
-  background: linear-gradient(to left, #ffffff, #ece9e6); 
+  background: rgba(255, 255, 255, 1.0);
   color: black;
   padding: 2rem;
 }
@@ -112,7 +110,7 @@ nav ul li a:hover {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: #ece9e6;
+  background: rgba(255, 255, 255, 1.0);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   z-index: 99;
   opacity: 0.98;
@@ -129,3 +127,45 @@ nav ul li a:hover {
 li:hover > .submenu {
   display: block;
 }
+
+
+.mobile-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.mobile-menu li {
+  border-bottom: 1px solid #151414;
+  padding: 0.5rem 0;
+}
+
+.mobile-menu li a {
+  display: block;
+  padding: 0.5rem 1rem;
+  color: black;
+  text-decoration: none;
+}
+
+.mobile-menu li a:hover {
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+}
+
+/* Blur Overlay */
+.blur-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 1.0);
+  z-index: 10;
+}
+
+/* Ensure the mobile menu is on top of the blur */
+.mobile-menu {
+  position: relative;
+  z-index: 20;
+}
+
