--- a/src/components/Chatbot/chatbot.css
+++ b/src/components/Chatbot/chatbot.css
@@ -17,6 +17,14 @@ body {
   color: black;
 }
 
+.container
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
 .container .box
 {
   position: relative;
@@ -231,11 +239,17 @@ body {
 .website b {
   font-size: 25px;
   color: white;
+  @media (max-width: 640px) {
+    color: black;
+  }
 }
 
 .document b {
   font-size: 25px;
   color: white;
+   @media (max-width: 640px) {
+    color: black;
+  }
 }
 .website span {
   color: white;
