ellipse added to all platform page bottoms

--- a/src/components/Chatbot/chatbot.css
+++ b/src/components/Chatbot/chatbot.css
@@ -257,3 +257,13 @@ body {
 .document span {
   color: white;
 }
+
+.content-container-cb {
+  background: linear-gradient(to bottom, #FF6600, #fc4a1a);
+  border: none;
+  clip-path: ellipse(75% 100% at center top);
+  min-height: 300px;
+  @media (max-width: 640px) {
+    min-height: 175px;
+  }
+}
