--- a/src/components/ProServices/proServices.css
+++ b/src/components/ProServices/proServices.css
@@ -15,3 +15,12 @@ body {
 .section-ps-3 {
   background-color: white;
 }
+.content-container-ps {
+  background: linear-gradient(to bottom, #FF6600, #fc4a1a);
+  border: none;
+  clip-path: ellipse(75% 100% at center top);
+  min-height: 300px;
+  @media (max-width: 640px) {
+    min-height: 175px;
+  }
+}
