--- a/src/components/Media/media.css
+++ b/src/components/Media/media.css
@@ -1,45 +1,3 @@
-
-
-/* Modal Styles */
-.pdf-modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* dimming effect */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999; /* Ensures modal is on top */
-}
-
-.pdf-modal-content {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  max-width: 80%;
-  width: 800px;
-  text-align: center;
-  position: relative;
-  z-index: 10000;
-}
-
-.close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 36px;
-  font-weight: bold;
-  cursor: pointer;
-  color: white;
-}
-
-iframe {
-  border: none;
-}
-
-/* Optional: Add a blurred background effect when the modal is open */
-.blur-background {
-  filter: blur(5px);
+li a {
+  text-decoration: underline;
 }
