chatbot pg images & mobile

--- a/src/components/Media/media.css
+++ b/src/components/Media/media.css
@@ -1,3 +1,21 @@
-li span {
+.documents li span {
   text-decoration: underline;
+  cursor: pointer;
 }
+
+.videos li span {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.podcasts li span {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.articles li span {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
